Create initial html structure of ToDoList

--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
     <title>MY SIWeek-Orginazer</title>
   </head>
   <body>
+    <header>
+      <h1>My SI - Week Orginazer</h1>
+    </header>
+    <main>
+      <div>
+        <input type="text" placeholder="My homework ..." class="todoInput" />
+        <button class="addTodo">add Todo</button>
+      </div>
+      <div id="todo-list"></div>
+    </main>
     <script src="javascript.js"></script>
   </body>
 </html>
