Created a deleteAll button

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <button class="addTodo">add Todo</button>
       </div>
       <div id="todo-list"></div>
+      <button id="delete-AllTodos">Delete All</button>
     </main>
     <script src="javascript.js"></script>
   </body>
