Add div tag and class

--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
         <button class="addTodo">add Todo</button>
       </div>
       <div id="todo-list"></div>
-      <button id="delete-AllTodos">Delete All</button>
+      <div class="delete-AllTodos-button">
+        <button id="delete-AllTodos">Delete All</button>
+      </div>
     </main>
     <script src="javascript.js"></script>
   </body>
