--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <h1>My SI - Week Orginazer</h1>
     </header>
     <main>
-      <div>
+      <div id="input-todos">
         <input type="text" placeholder="My homework ..." class="todoInput" />
         <button class="addTodo">add Todo</button>
       </div>
