Renamed javascript file

--- a/index.html
+++ b/index.html
@@ -25,6 +25,6 @@
         <button id="delete-AllTodos">Delete All</button>
       </div>
     </main>
-    <script src="javascript.js"></script>
+    <script src="todoList.js"></script>
   </body>
 </html>
