--- a/index.html
+++ b/index.html
@@ -26,5 +26,6 @@
       </div>
     </main>
     <script src="todoList.js"></script>
+    <script src="dataManager.js"></script>
   </body>
 </html>
