--- a/index.html
+++ b/index.html
@@ -27,7 +27,15 @@
       <section>
         <div class="si-week">
           <label for="si-week">SI-Week</label>
-          <input type="number" id="si-week" />
+          <select id="si-week">
+            <option value="Choose SI-Week" disabled hidden selected>
+              Choose your SI-Week
+            </option>
+            <option value="1">1</option>
+            <option value="2">2</option>
+            <option value="3">3</option>
+            <option value="4">4</option>
+          </select>
         </div>
         <div class="si-week-date">
           <label for="date" class="date">Day</label>
@@ -37,6 +45,9 @@
           <label for="hours">Hours</label>
           <input type="number" />
         </div>
+      </section>
+      <section id="data-output">
+        <p>Modul 2 <i class="fa-solid fa-chevron-down"></i></p>
       </section>
     </main>
     <script src="todoList.js"></script>
