--- a/index.html
+++ b/index.html
@@ -53,15 +53,14 @@
         <div class="data">
           <p>SI Week 1 Invested Hours:</p>
           <span class="invested-hours"></span>
-          <p>Finished :</p>
-          <span class="finished-in-percent"></span>
+          <p>Finished : <span class="finished-in-percent"></span></p>
         </div>
         <div class="display-data-details">
           <button>Details</button>
         </div>
       </section>
     </main>
-    <script src="todoList.js"></script>
-    <script src="dataManager.js"></script>
+    <script type="module" src="todoList.js"></script>
+    <script type="module" src="dataManager.js"></script>
   </body>
 </html>
