Move span in p, add link to new file

--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
         <hr />
         <p>SI Week 1</p>
         <div class="data">
-          <p>SI Week 1 Invested Hours:</p>
-          <span class="invested-hours"></span>
+          <p>SI Week 1 Invested Hours: <span class="invested-hours"></span></p>
+
           <p>Finished : <span class="finished-in-percent"></span></p>
         </div>
         <div class="display-data-details">
@@ -62,5 +62,6 @@
     </main>
     <script type="module" src="todoList.js"></script>
     <script type="module" src="dataManager.js"></script>
+    <script type="module" src="SIWeekManager.js"></script>
   </body>
 </html>
