Add class status

--- a/index.html
+++ b/index.html
@@ -24,6 +24,14 @@
       <div class="delete-AllTodos-button hide-button">
         <button id="delete-AllTodos">Delete All Projects</button>
       </div>
+      <div class="status">
+        Status: <span class="percentage-status"></span>
+        <i
+          class="fa-solid fa-cloud-arrow-down"
+          title="save your status"
+          id="save-status"
+        ></i>
+      </div>
       <section id="si-week-input-data">
         <div class="si-week-date">
           <label for="date" class="date">Day</label>
