--- a/index.html
+++ b/index.html
@@ -57,20 +57,21 @@
       <section id="data-output">
         <p>Modul 2 <i class="fa-solid fa-chevron-down modul2"></i></p>
         <hr />
-        <div class="hide">
+        <!--------start ------------------------->
+        <div class="hide si-week-one-section">
           <p>SI Week 1</p>
-          <div class="data">
+          <div class="data-si-week-one">
             <p>
-              SI Week 1 Invested Hours: <span class="invested-hours"></span>
+              SI Week 1 Invested Hours: <span class="invested-hours-si-week-one"></span>
             </p>
 
-            <p>Finished : <span class="finished-in-percent"></span></p>
+            <p>Finished : <span class="finished-in-percent-si-week-one"></span></p>
           </div>
           <div class="display-data-details">
-            <button id="displayDetails">Details</button>
+            <button id="displayDetails-si-week-one">Details</button>
           </div>
-          <div id="data-table">
-            <table id="table" class="hide">
+          <div id="data-table-si-week-one">
+            <table id="table-si-week-one">
               <tr>
                 <th class="tableHeader-day"></th>
                 <th class="tableHeader-hours"></th>
@@ -79,6 +80,29 @@
             </table>
           </div>
         </div>
+        <!-----si week 2 section-->
+        <div class="hide si-week-two-section">
+          <p>SI Week 2</p>
+          <div class="data-si-week-two">
+            <p>
+              SI Week 2 Invested Hours: <span class="invested-hours-si-week-two"></span>
+            </p>
+            <p>Finished : <span class="finished-in-percent-si-week-two"></span></p>
+          </div>
+        <div class="display-data-details">
+            <button id="displayDetails-si-week-two">Details</button>
+          </div>
+          <div id="data-table-si-week-two">
+            <table id="table-si-week-two" class="hide">
+              <tr>
+                <th class="tableHeader-day"></th>
+                <th class="tableHeader-hours"></th>
+              </tr>
+              <div id="table-content"></div>
+            </table>
+          </div>
+        </div>
+      </div>
       </section>
     </main>
     <script type="module" src="todoList.js"></script>
