Add si weeks 3,4 and 5

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <main>
       <div id="input-todos">
         <input type="text" placeholder="My homework ..." class="todoInput" />
-        <button class="addTodo">add Todo</button>
+        <button class="addTodo">add Project</button>
       </div>
       <div id="todo-list"></div>
       <div class="delete-AllTodos-button hide-button">
@@ -95,6 +95,75 @@
           </div>
           <div id="data-table-si-week-two">
             <table id="table-si-week-two" class="hide">
+              <tr>
+                <th class="tableHeader-day"></th>
+                <th class="tableHeader-hours"></th>
+              </tr>
+              <div id="table-content"></div>
+            </table>
+          </div>
+        </div>
+      </div>
+      <!--------------si-week 3----------------->
+       <div class="hide si-week-three-section">
+          <p>SI Week 3</p>
+          <div class="data-si-week-three">
+            <p>
+              SI Week 3 Invested Hours: <span class="invested-hours-si-week-three"></span>
+            </p>
+            <p>Finished : <span class="finished-in-percent-si-week-three"></span></p>
+          </div>
+        <div class="display-data-details">
+            <button id="displayDetails-si-week-three">Details</button>
+          </div>
+          <div id="data-table-si-week-three">
+            <table id="table-si-week-three" class="hide">
+              <tr>
+                <th class="tableHeader-day"></th>
+                <th class="tableHeader-hours"></th>
+              </tr>
+              <div id="table-content"></div>
+            </table>
+          </div>
+        </div>
+      </div>
+      <!------------------Si-week 4 ----------->
+      <div class="hide si-week-four-section">
+          <p>SI Week 4</p>
+          <div class="data-si-week-four">
+            <p>
+              SI Week 4 Invested Hours: <span class="invested-hours-si-week-four"></span>
+            </p>
+            <p>Finished : <span class="finished-in-percent-si-week-four"></span></p>
+          </div>
+        <div class="display-data-details">
+            <button id="displayDetails-si-week-four">Details</button>
+          </div>
+          <div id="data-table-si-week-four">
+            <table id="table-si-week-four" class="hide">
+              <tr>
+                <th class="tableHeader-day"></th>
+                <th class="tableHeader-hours"></th>
+              </tr>
+              <div id="table-content"></div>
+            </table>
+          </div>
+        </div>
+      </div>
+      <!---------------------si week 5-->
+      <div class="hide si-week-five-section">
+          <p>SI Week 5</p>
+          <div class="data-si-week-five">
+            <p>
+              SI Week 5 Invested Hours: <span class="invested-hours-si-week-five"></span>
+            </p>
+            <p>Finished : <span class="finished-in-percent-si-week-five"></span></p>
+          </div>
+        <div class="display-data-details">
+            <button id="displayDetails-si-week-five">Details</button>
+          </div>
+          <div id="data-table-si-week-five">
+            <table id="table-si-week-five" class="hide">
               <tr>
                 <th class="tableHeader-day"></th>
                 <th class="tableHeader-hours"></th>
