--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
           <div class="display-data-details">
             <button id="displayDetails-si-week-one">Details</button>
           </div>
-          <div id="data-table-si-week-one">
-            <table id="table-si-week-one">
+          <div id="data-table-si-week-one" >
+            <table id="table-si-week-one" >
               <tr>
                 <th class="tableHeader-day"></th>
                 <th class="tableHeader-hours"></th>
@@ -93,8 +93,8 @@
         <div class="display-data-details">
             <button id="displayDetails-si-week-two">Details</button>
           </div>
-          <div id="data-table-si-week-two">
-            <table id="table-si-week-two" class="hide">
+          <div id="data-table-si-week-two" >
+            <table id="table-si-week-two">
               <tr>
                 <th class="tableHeader-day"></th>
                 <th class="tableHeader-hours"></th>
@@ -140,7 +140,7 @@
             <button id="displayDetails-si-week-four">Details</button>
           </div>
           <div id="data-table-si-week-four">
-            <table id="table-si-week-four" class="hide">
+            <table id="table-si-week-four">
               <tr>
                 <th class="tableHeader-day"></th>
                 <th class="tableHeader-hours"></th>
@@ -175,8 +175,8 @@
       </div>
       </section>
     </main>
-    <script type="module" src="todoList.js"></script>
-    <script type="module" src="SIWeekManager.js"></script>
-    <script type="module" src="dataManager.js"></script>
+    <script  src="todoList.js"></script>
+    <script  src="SIWeekManager.js"></script>
+    <script src="dataManager.js"></script>
   </body>
 </html>
