--- a/index.html
+++ b/index.html
@@ -175,8 +175,9 @@
       </div>
       </section>
     </main>
-    <script  src="todoList.js"></script>
+    <!-- <script  src="todoList.js"></script> -->
     <script  src="SIWeekManager.js"></script>
+    <script  src="todoList.js"></script>
     <script src="dataManager.js"></script>
   </body>
 </html>
