--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             <button id="displayDetails-si-week-one">Details</button>
           </div>
           <div id="data-table-si-week-one" >
-            <table id="table-si-week-one" >
+            <table id="table-si-week-one" class="hide" >
               <tr>
                 <th class="tableHeader-day"></th>
                 <th class="tableHeader-hours"></th>
@@ -94,7 +94,7 @@
             <button id="displayDetails-si-week-two">Details</button>
           </div>
           <div id="data-table-si-week-two" >
-            <table id="table-si-week-two">
+            <table id="table-si-week-two" class="hide">
               <tr>
                 <th class="tableHeader-day"></th>
                 <th class="tableHeader-hours"></th>
@@ -103,7 +103,8 @@
             </table>
           </div>
         </div>
-      </div>
+      <!-- </div> -->
+
       <!--------------si-week 3----------------->
        <div class="hide si-week-three-section">
           <p>SI Week 3</p>
@@ -140,7 +141,7 @@
             <button id="displayDetails-si-week-four">Details</button>
           </div>
           <div id="data-table-si-week-four">
-            <table id="table-si-week-four">
+            <table id="table-si-week-four" class="hide">
               <tr>
                 <th class="tableHeader-day"></th>
                 <th class="tableHeader-hours"></th>
@@ -173,6 +174,9 @@
           </div>
         </div>
       </div>
+
+  
+    </div>
       </section>
     </main>
     <!-- <script  src="todoList.js"></script> -->
