--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
   </head>
   <body>
     <header>
-      <h1>My SI - Week Organizer</h1>
+    
+      <h1>  <i class="fa-solid fa-cat firstkitten"></i>My Kitten SI - Week Organizer  <i class="fa-solid fa-cat secondkitten"></i></h1>
+
     </header>
     <main>
       <div id="input-todos">
@@ -38,11 +40,11 @@
           <input type="date" id="date" min="2022-01-01" max="2024-12-31" />
         </div>
         <div class="si-week-hours">
-          <label for="hours">Hours</label>
+          <label for="hours" class="label-hours">Hours</label>
           <input type="number" id="hours" />
         </div>
         <div class="si-week">
-          <label for="select-si-week">SI-Week</label>
+          <label for="select-si-week" class="label-siweek">SI-Week</label>
           <select id="select-si-week">
             <option value="Choose SI-Week" disabled hidden selected>
               Choose your SI-Week
@@ -56,7 +58,7 @@
         </div>
       </section>
       <section id="data-output">
-        <p>Modul 2 <i class="fa-solid fa-chevron-down modul2"></i></p>
+        <p class="modul-2">Modul 2 <i class="fa-solid fa-chevron-down modul2"></i></p>
         <hr />
         <!--------start ------------------------->
         <div class="hide si-week-one-section">
@@ -77,7 +79,7 @@
                 <th class="tableHeader-day"></th>
                 <th class="tableHeader-hours"></th>
               </tr>
-              <div id="table-content"></div>
+              <!-- <div id="table-content"></div>Change id in class!  -->
             </table>
           </div>
         </div>
@@ -99,7 +101,7 @@
                 <th class="tableHeader-day"></th>
                 <th class="tableHeader-hours"></th>
               </tr>
-              <div id="table-content"></div>
+              <!-- <div id="table-content"></div> -->
             </table>
           </div>
         </div>
@@ -123,7 +125,7 @@
                 <th class="tableHeader-day"></th>
                 <th class="tableHeader-hours"></th>
               </tr>
-              <div id="table-content"></div>
+              <!-- <div id="table-content"></div> -->
             </table>
           </div>
         </div>
@@ -146,7 +148,7 @@
                 <th class="tableHeader-day"></th>
                 <th class="tableHeader-hours"></th>
               </tr>
-              <div id="table-content"></div>
+              <!-- <div id="table-content"></div> -->
             </table>
           </div>
         </div>
@@ -169,7 +171,7 @@
                 <th class="tableHeader-day"></th>
                 <th class="tableHeader-hours"></th>
               </tr>
-              <div id="table-content"></div>
+              <!-- <div id="table-content"></div> -->
             </table>
           </div>
         </div>
